k8s_manifests/opencost-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
