k8s_manifests/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-dep
  namespace: monitoring

spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue-green-dep
      color: blue
  template:
    metadata:
      labels:
        app: blue-green-dep
        color: blue
    spec:
      containers:
        - name: bestrong-api-blue
          image: steeve05/bestr:blue # Replace with your image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
