k8s_manifests/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-dep
  namespace: monitoring

spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-green-dep
      color: green
  template:
    metadata:
      labels:
        app: blue-green-dep
        color: green
    spec:
      containers:
        - name: bestrong-api
          image: steeve05/bestr:green # Replace with your image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
