k8s_manifests/opencost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencost
  template:
    metadata:
      labels:
        app: opencost
    spec:
      serviceAccountName: opencost
      containers:
      - name: opencost
        image: katerynabakhmat/opencost:latest
        ports:
        - containerPort: 9091
