k8s_manifests/opencost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: monitoring
spec:
  selector:
    app: opencost
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9003
