k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bestrong-api-svc
  namespace: monitoring
spec:
  selector:
    app: blue-green-dep
    color: blue
  ports:
  - protocol: TCP
    port: 80 #9090
    targetPort: 80 # 9090
  type: ClusterIP
